feat: Adding endpoint to list frame details
